k8s/game.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-deployment
  namespace: chess
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
        - name: game
          image: solitudeanyway/game_s6:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: info-volume
              mountPath: /app/info
            - name: engines-volume
              mountPath: /app/engines
      volumes:
        - name: info-volume
          persistentVolumeClaim:
            claimName: configuration-volume
        - name: engines-volume
          persistentVolumeClaim:
            claimName: engine-volume
---
apiVersion: v1
kind: Service
metadata:
  name: game-service
  namespace: chess
spec:
  type: NodePort
  selector:
    app: game
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30302
  clusterIP: 10.0.154.128
