k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: chess
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak:16.1.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: chess
spec:
  type: LoadBalancer
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 8080
  clusterIP: 10.0.11.133
