k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: k8s.keycloak.service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 5003
    - host: k8s.game.service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  number: 5000
    - host: k8s.management.service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: management-service
                port:
                  number: 5001
